# AetherMint

./: .env.example  .gitignore  ACO_PR_DESCRIPTION.md  ACO_PR_DESCRIPTION_FINAL.md  AGI_TUTOR_PR_DESCRIPTION.md  AGI_TUTOR_SYSTEM.md  ANALYTICS_IMPLEMENTATION_README.md  ASSIGNMENT_PR_DESCRIPTION.md  ASSIGNMENT_SYSTEM_README.md  BCI_IMPLEMENTATION_README.md  CI_CD_FIXES.md  COLLABORATION_CLASSROOM_README.md  COLLABORATION_IMPLEMENTATION_SUMMARY.md  COLLABORATION_PR_DESCRIPTION.md  COMPLETION_SUMMARY.md  CONSCIOUSNESS_UPLOAD_DOCUMENTATION.md  CONTENT_DELIVERY_IMPLEMENTATION.md  CREATE_PR_INSTRUCTIONS.md  DYNAMIC_FEES_IMPLEMENTATION.md  DYNAMIC_NFT_CREDENTIALS.md  ENROLLMENT_PAYMENT_SYSTEM_README.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FEDERATED_LEARNING_PR.md  FRONTEND_PERFORMANCE_MONITORING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_4_FEATURES.md  INTERACTIVE_COMPONENTS_PR.md  IPFS_INTEGRATION_README.md  LICENSE  NANOTECHNOLOGY_FILE_MANIFEST.md  NANOTECHNOLOGY_IMPLEMENTATION_GUIDE.md  NANOTECHNOLOGY_IMPLEMENTATION_SUMMARY.md  NANOTECHNOLOGY_LEARNING_PLAN.md  NEURAL_INTERFACE_PR_DESCRIPTION.md  NEURAL_INTERFACE_README.md  PLAGIARISM_DETECTION_README.md  PR_AI_CHAT_DESCRIPTION.md  PR_AI_SEARCH_DESCRIPTION.md  PR_BCI_IMPLEMENTATION.md  PR_BODY.md  (+46 more)
contracts/: ANALYTICS_STORAGE.md  AUTOMATION_SETUP.md  Cargo.toml  DNA_STORAGE_README.md  PR_DNA_STORAGE_DESCRIPTION.md  eventLogger.md
contracts/scripts/: deploy_analytics.sh  deploy_courseMetadata.js  deploy_credential_registry.js  deploy_credentials.rs  deploy_userProfile.js  device_registration.js  package.json  (+1 more)
(+968 files in other folders)
